配置环境局

--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
     <title>Document</title>
   </head>
   <body>
-    <img src="../src/assets/images/2.jpg" />
-    <div id="app"><div>123</div></div>
+    <div id="app"><div>1222234`2224ww44</div></div>
     <button>按钮</button>
+    <div id="main" style="width: 600px; height: 400px"></div>
     <script>
       document.querySelector("button").onclick = () => {
         console.log("es6");
