--- a/public/index.html
+++ b/public/index.html
@@ -15,5 +15,7 @@
         console.log("es6");
       };
     </script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/vue/2.6.14/vue.min.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/vue-router/3.5.3/vue-router.min.js"></script>
   </body>
 </html>
