--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="app"><div>1222234`2224ww44</div></div>
+    <div id="root"></div>
     <button>按钮</button>
     <div id="main" style="width: 600px; height: 400px"></div>
     <script>
